# M4-methods

./: 260  4Theta method.R  ATA-Damped_R.R  ATAMethod-3.rar  Benchmarks and Evaluation.R  Doxyfile  Evaluation and Ranks.xlsx  GROEC - M4_Code.R  M4-Method-Description-ATA-simple.docx  M4-Method-Description.docx  M4-Method-Description_NZLegaki-KKoutsouri.docx  M4_ATA_1.r  ML_benchmarks.py  PEEF-quarterly.R  PEEF-yearly.R  README.md  allforcodef.R  dotm.r  forecast.py  operaDaily.RData  operaWeekly.RData  readme-ata1.txt  setup.py  utilities.py
005 - vangspiliot/: 4Theta method
009/: readme-ata.txt
009 - gyapar/: ATAMethod-4.rar
036/: M4-FPIS-create-datasets-20180523.R  M4-FPIS-submission-code-20180525.R
036 - fotpetr/: M4-FPIS-create-datasets-20180523.R  M4-FPIS-submission-code-20180525.R
039/: auxiliar.R  forecast.R
039 - djpt999/: auxiliar.R  forecast.R
043/: README.md
043 - gbonte/: Lower.subset.csv  Pred.subset.csv  Upper.subsetcsv  calibration.R  generate.R  library.R  mpred.R  predict.R  read.R
069 - jafiorucci/: jafiorucci.R
072 - forecaster18/: readmem4.md
072 - forecaster18/Daily/: Readme.md
072 - forecaster18/Hourly/: Readme.md  m4_houraly_final_allforecast.R
072 - forecaster18/Quarterly/: aggregate_q.R  m4_quarterly_bagging_ets.R
072 - forecaster18/Weekly/: m4_weekly_data_prepare.R  m4_weekly_forecast.R
072 - forecaster18/Yearly/: M4_forecast_yearly.R  hybrid_theta.R
072 - forecaster18/final output/: final_output.R
072 - forecaster18/monthly/: aggregate_m.R  forecast_pro_final.R  hybrid_theta.R
078/: DownloadData.sh
078 - dashaub/: Dockerfile  cleanUpper.R  forecastM4.R  forecastM4.sh
104/: example_monthly_time_series.R
104 - tiagomendesdantas/: example_monthly_time_series.R
106 - fritschi87/: createSubmission.R  functions.R
118 - slaweks17/: readme.txt
118 - slaweks17/R/: merge_PI.R
118 - slaweks17/c++/: ES_RNN_E_PI.cc
126/: LICENSE  gen_forecasts.rar  lib.rar
126 - kchirikhin/: CMakeLists.txt  LICENSE  src.rar  tests.rar
132 - roubinchtein/: allforcodef.R
211/: train_models.py
211 - btrotta/: environment.txt  metrics.py  model_definitions.py  predict.py  shuffle.py  train_models.py  utilities.py
216/: Readme
216 - kasungayan/: Daily.rar  Hourly.rar  M4_Submission_Scripts.rar  Monthly.rar  Quartely.rar  Weekly.rar  Yearly.rar
219/: Hourly-train1.csv  Weekly-train1.csv  execution_REPRO2.m  fun_M4nREPRO2.m
219 - manblue0/: Hourly-train1.csv  Weekly-train1.csv  execution_REPRO2.m  fun_M4nREPRO2.m
223/: daily-v12.R  hourly-v7.R  quarterly-v18.R  readme.txt
223 - Arsa-Nik/: Monthly-v18.R  daily-v12.R  hourly-v7.R  quarterly-v18.R  readme.txt  weekly-v18.R  yearly-v20.R
225/: BLE_for_QuHo.m  BLE_for_YeMoWeDa.m
225 - GMD-CUT/: BLE_for_QuHo.m  BLE_for_YeMoWeDa.m
227/: Script05.R
227 - config-i1/: Script01.R  Script02.R  Script03.R  Script04.R  Script06.R
237 - prologistica/: M4.rar  README.txt  tester.rar
238/: M4-Method-Description_Doornik.docx  Quarterly_01.in7  doc.rar
238 - doornik/: Monthly_01.bn7  Monthly_01.in7  Quarterly_01.in7  Yearly_01.bn7  Yearly_01.in7  code.rar  data_M3.rar
239 - Siopred/: Warning
243/: PEEF-daily.R  PEEF-hourly.R  PEEF-monthly.R  PEEF-weekly.R  operaHourly.RData
243 - Waddah-Waheeb/: PEEF-daily.R  PEEF-hourly.R  PEEF-monthly.R  PEEF-quarterly.R  PEEF-weekly.R  PEEF-yearly.R
251 - MichaelIbrahim-GaTech/: dotm.r
252/: ATADamped.rar
252 - hnftyln/: ATA-Damped_R.R  readme-atadamped.txt
253 - beyzacetin/: ATAMethod-1.rar  readme-simple.txt
256/: 4Theta method.R  ATAMethod-2.rar  Benchmarks and Evaluation.R  README.md
256 - ekiztugce/: Benchmarks and Evaluation.R  readme-ata2.txt
260/: final_M4.R
260 - KaterinaKou/: final_M4.R
Bontempi-AMAR/: README.md
CNN-TS/: environment.txt  metrics.py  model_definitions.py  predict.py  shuffle.py
Dataset/: Daily-test.csv  Hourly-test.csv  Hourly-train.csv  Quarterly-test.csv  Weekly-test.csv  Weekly-train.csv  Yearly-test.csv
Dataset/Test/: Daily-test.csv  Hourly-test.csv  Quarterly-test.csv  Weekly-test.csv  Yearly-test.csv
Dataset/Train/: Hourly-train.csv  Weekly-train.csv
M4 best of 7 forecast files/: Forecast_best of 7.R
M4-ProLogistica_Soft/M4/: M4demo.R  M4makecluster.R  M4tools.R  model_choice_M4.R
M4-ProLogistica_Soft/tester/: classifier.R  combinations.R  correlation_predict.R  criteria.R  errors_calculation.R  models.R  modifiers.R  otm_fixed.R  predictions.R  tester.R  thetaf_fixed.R  tools.R
M4_Card_upload/code/: ForecastAB.oxh  ForecastAB.oxo  (+5 more)
Point Forecasts/: Submission Info.xlsx  submission-024.rar  submission-218.rar  submission-249.rar  submission-Naive.rar  submission-Naive2.rar  submission-SES.rar  submission-sNaive.rar
Prediction Intervals/: Submission Info.xlsx
R/: merge.R  readme.txt
Shaub_David/: README.md
c++/: ES_RNN_E.cc  readme.txt  slstm.cpp
forecasting/: Monthly-v18.R  daily-v12.R  hourly-v7.R  quarterly-v18.R  weekly-v18.R  yearly-v20.R
gen_forecasts/: forecast_daily.py  forecast_daily.py~  forecast_hour.py~  forecast_hourly.py  forecast_month.py~  forecast_monthly.py  forecast_monthly.py~  forecast_quart.py~  forecast_quarterly.py  forecast_quarterly.py~  forecast_week.py~  forecast_weekly.py  forecast_weekly.py~  forecast_year.py~  forecast_yearly.py  m4c_hourly_data.txt  m4c_yearly_data.txt
irafm-submission/: m4-release
lib/lcacomp/: CMakeLists.txt  README  bits.cpp  bits.h  cfg2enc.cpp  cfg2enc.h  lcacommon.h  lcacomp.cpp  lcacomp.h  txt2cfg_online.cpp  txt2cfg_online.h
lib/rp/: CMakeLists.txt  README.md  rp.cpp  rp.h
lib/rp/internal/: copy_lf_queue.hpp  hf_queue.hpp  hf_queue_old.hpp  lf_queue.hpp  ll_el.hpp  ll_vec.hpp  packed_file.hpp  packed_gamma_file.hpp  packed_gamma_file2.hpp  packed_gamma_file3.hpp  pair_hash.hpp  skippable_text.hpp  text_positions.hpp
lib/zstd/: CMakeLists.txt
sql/: createM72nn_SQLServer.sql  createM72nn_mysql.txt  readme.txt
src/: parallel.R
srihari_prakash/: Quarterly  dailyForecastModel_v1.R
tests/: __init__.py  driver_test.py  mock_sampler.h  predictor_test.py  test_bignums.cpp  test_predictor.cpp
(+152 files in other folders)
